--- a/data/index.html
+++ b/data/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>ESP32 Web Server</h1>
   <p>GPIO state: <strong> %STATE%</strong></p>
-  <p><a href="/on"><button class="button">ON</button></a></p>
+  <p><a href="/Water Quality Data.csv"><button class="button">text.txt</button></a></p>
   <p><a href="/off"><button class="button button2">OFF</button></a></p>
 </body>
 </html>
