fix missing numberOfDataSeries

--- a/data/index.html
+++ b/data/index.html
@@ -278,11 +278,9 @@
             </footer>
         </div>
     </div>
-
-
-
-
+    
     <script>
+        var numberOfDataSeries = 2
         var apexChartOptions = {
             series: [{
                 name: 'series1',
