fix array index bug

--- a/data/index.html
+++ b/data/index.html
@@ -278,7 +278,7 @@
             </footer>
         </div>
     </div>
-    
+
     <script>
         var numberOfDataSeries = 2
         var apexChartOptions = {
@@ -349,7 +349,7 @@
                                 var dateStr = (rowValues[0] != prevDate) ? rowValues[0] : ''
                                 prevDate = rowValues[0]
                                 //charts.GPSLat.xAxisLabels.push(`${dateStr} ${rowValues[1]}`)
-                                apexChartOptions.series.data.push(rowValues[2])
+                                apexChartOptions.series[0].data.push(rowValues[2])
 
                                 //charts.GPSLong.xAxisLabels.push(`${dateStr} ${rowValues[1]}`)
                                 //charts.GPSLong.values.push(rowValues[3])
