add render into getData()

--- a/data/index.html
+++ b/data/index.html
@@ -356,6 +356,7 @@
                             }
                         }
                     })
+                    chart1.render()
                 }
             };
             xhttp.open("GET", "Water Quality Data.csv", true);
