Remove Regex, Added Button Debounce

--- a/data/assets/index.html
+++ b/data/assets/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css">
+    <script src="apexcharts.min.js"></script>
 </head>
 <script>
     function select(element){
@@ -18,7 +19,7 @@
             <a href="#download">
                 <div class="item" onclick="select(this)">
                     <div class="activeIndicator selected">
-                        <img class="icon" src="assets\download.svg">
+                        <img class="icon" src="\download.svg">
                     </div>
                     <div class="label">Download</div>
                 </div>
@@ -26,7 +27,7 @@
             <a href="#home">
                 <div class="item" onclick="select(this)">
                     <div class="activeIndicator">
-                        <img class="icon" src="assets\download.svg">
+                        <img class="icon" src="\download.svg">
                     </div>
                     <div class="label">Home</div>
                 </div>
@@ -34,7 +35,7 @@
             <a href="#services">
                 <div class="item" onclick="select(this)">
                     <div class="activeIndicator">
-                        <img class="icon" src="assets\download.svg">
+                        <img class="icon" src="\download.svg">
                     </div>
                     <div class="label">Services</div>
                 </div>
@@ -42,7 +43,7 @@
             <a href="#clients">
                 <div class="item" onclick="select(this)">
                     <div class="activeIndicator">
-                        <img class="icon" src="assets\download.svg">
+                        <img class="icon" src="\download.svg">
                     </div>
                     <div class="label">Clients</div>
                 </div>
@@ -50,7 +51,7 @@
             <a href="#contact">
                 <div class="item" onclick="select(this)">
                     <div class="activeIndicator">
-                        <img class="icon" src="assets\download.svg">
+                        <img class="icon" src="\download.svg">
                     </div>
                     <div class="label">Contact</div>
                 </div>
