--- a/data/assets/index.html
+++ b/data/assets/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css">
     <script src="apexcharts.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 </head>
 <script>
-    function select(element){
-        document.querySelectorAll('.selected').forEach(e => {e.classList.remove('selected')})
+    function select(element) {
+        document.querySelectorAll('.selected').forEach(e => { e.classList.remove('selected') })
         element.querySelector('.activeIndicator').classList.add('selected')
     }
 </script>
@@ -19,7 +20,7 @@
             <a href="#download">
                 <div class="item" onclick="select(this)">
                     <div class="activeIndicator selected">
-                        <img class="icon" src="\download.svg">
+                        <img class="icon" src="download.svg">
                     </div>
                     <div class="label">Download</div>
                 </div>
@@ -27,7 +28,7 @@
             <a href="#home">
                 <div class="item" onclick="select(this)">
                     <div class="activeIndicator">
-                        <img class="icon" src="\download.svg">
+                        <img class="icon" src="select.svg">
                     </div>
                     <div class="label">Home</div>
                 </div>
@@ -35,7 +36,7 @@
             <a href="#services">
                 <div class="item" onclick="select(this)">
                     <div class="activeIndicator">
-                        <img class="icon" src="\download.svg">
+                        <img class="icon" src="download.svg">
                     </div>
                     <div class="label">Services</div>
                 </div>
@@ -43,7 +44,7 @@
             <a href="#clients">
                 <div class="item" onclick="select(this)">
                     <div class="activeIndicator">
-                        <img class="icon" src="\download.svg">
+                        <img class="icon" src="download.svg">
                     </div>
                     <div class="label">Clients</div>
                 </div>
@@ -51,149 +52,255 @@
             <a href="#contact">
                 <div class="item" onclick="select(this)">
                     <div class="activeIndicator">
-                        <img class="icon" src="\download.svg">
+                        <img class="icon" src="download.svg">
                     </div>
                     <div class="label">Contact</div>
                 </div>
             </a>
         </div>
         <div class="content">
-            <h2>Sidebar with Icons</h2>
-            <p>This side navigation is of full height (100%) and always shown.</p>
-            <p id="download">Download - Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque
-                et eum,
-                altera fabulas ut
-                quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et.
-                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
-                quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et.
-                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p id="home">Home - Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum,
-                altera fabulas ut
-                quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et.
-                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
-                quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et.
-                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>This side navigation is of full height (100%) and always shown.</p>
-            <p id="services"> Services - Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque
-                et
-                eum, altera fabulas ut
-                quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et.
-                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
-                quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et.
-                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>This side navigation is of full height (100%) and always shown.</p>
-            <p id="clients">Clients - Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et
-                eum, altera fabulas ut
-                quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et.
-                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
-                quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et.
-                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>This side navigation is of full height (100%) and always shown.</p>
-            <p id="contact">Contact - Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et
-                eum, altera fabulas ut
-                quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et.
-                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
-                quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et.
-                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>This side navigation is of full height (100%) and always shown.</p>
-            <p>Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
-                quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et.
-                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-            <p>Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut
-                quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et.
-                Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+            <div id="card">
+                <div id="chart"></div>
+                <div id="cardContent">
+                    <h1>Temperature</h1>
+                    <p>Mesured in degrees celcius, this Sensor uses a K type thermocouple operating at 3.3v</p>
+                    <a href="calibrate" style="text-decoration: none;">
+                        <div id="cardButton">Calibrate</div>
+                    </a>
+                </div>
+
+            </div>
+
         </div>
     </div>
 </body>
 
 <script>
-    var numberOfDataSeries = 2
-    var apexChartOptions = {
-        series: [{
-            name: 'series1',
-            data: []
-        }],
+    var options = {
+        series: [
+            {
+                name: "Temperature",
+                data: [28, 29, 33, 36, 32, 32, 33]
+            }
+        ],
         chart: {
+            type: 'line',
             height: 350,
-            type: 'area',
+            zoom: {
+                enabled: true,
+                autoScaleYaxis: false,
+                zoomedArea: {
+                    fill: {
+                        color: '#90CAF9',
+                        opacity: 0.4
+                    },
+                    stroke: {
+                        color: '#0D47A1',
+                        opacity: 0.4,
+                        width: 1
+                    }
+                }
+            },
             toolbar: {
-                show: false,
+                show: true,
+                tools: {
+                    download: '<img class="icon" src="download.svg" width="50">',
+                    selection: false,
+                    zoom: '<img class="icon" src="select.svg" width="50">',
+                    zoomin: '<img class="icon" src="zoom_in.svg" width="50">',
+                    zoomout: '<img class="icon" src="zoom_out.svg" width="50">',
+                    pan: false,
+                    reset: '<img class="icon" src="zoom_out_map.svg" width="50">',
+                    customIcons: []
+                }
             },
         },
-        // colors: ['#5350e9'],
-        // stroke: {
-        //     width: 2,
-        // },
-        // grid: {
-        //     show: false,
-        // },
+        color: '#d3e4ff',
         dataLabels: {
-            enabled: false
+            enabled: true,
+            style: {
+                fontSize: '14px',
+                fontFamily: 'Lato, sans-serif',
+                fontWeight: 'bold',
+            },
+            background: {
+                enabled: true,
+                foreColor: '#004880',
+                padding: 8,
+                borderRadius: 12,
+                borderWidth: 0,
+                opacity: 1,
+            },
         },
-        // xaxis: {
-        //     type: 'category',
-        //     axisBorder: {
-        //         show: false
-        //     },
-        //     axisTicks: {
-        //         show: false
-        //     },
-        //     labels: {
-        //         show: false,
-        //     }
-        // },
-        // show: false,
-        // yaxis: {
-        //     labels: {
-        //         show: false,
-        //     },
-        // },
-        // tooltip: {
-        //     x: {
-        //         show: false
-        //     },
-        // },
-    }
-    var chart1 = new ApexCharts(document.querySelector("#chartGPSLat"), apexChartOptions);
-    // chart1.render();
-
-    window.onload = getData
-
-    function getData() {
-        var xhttp = new XMLHttpRequest();
-        xhttp.onreadystatechange = function () {
-            if (this.readyState == 4 && this.status == 200) {
-                var prevDate = ''
-                var lines = this.responseText.split("\n");
-                lines && lines.forEach((line, lineNumber) => {
-                    var rowValues = line.split(",")
-                    if (rowValues.length == (numberOfDataSeries + 2)) { // skip incomplete lines
-                        if (lineNumber > 0) { // ignore header row
-                            rowValues = rowValues.map(val => val.replace('\r', '')) // clean up \r from any values
-
-                            var dateStr = (rowValues[0] != prevDate) ? rowValues[0] : ''
-                            prevDate = rowValues[0]
-                            apexChartOptions.series[0].data.push({
-                                x: `${rowValues[0]} ${rowValues[1]}`,
-                                y: rowValues[2]
-                            })
-
-                            //charts.GPSLong.xAxisLabels.push(`${dateStr} ${rowValues[1]}`)
-                            //charts.GPSLong.values.push(rowValues[3])
-                        }
-                    }
-                })
-                chart1.render()
+        stroke: {
+            curve: 'smooth'
+        },
+        grid: {
+            show: false,
+        },
+        markers: {
+            size: 0,
+            hover: {
+                size: 0,
             }
-        };
-        xhttp.open("GET", "Water Quality Data.csv", true);
-        xhttp.send();
-    }
+        },
+        xaxis: {
+            categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul'],
+            axisTicks: {
+                color: '#d3e4ff',
+            },
+            axisBorder: {
+                show: true,
+            },
+            labels: {
+                style: {
+                    colors: '#d3e4ff',
+                    fontSize: '12px',
+                    fontFamily: 'Lato, sans-serif',
+                    fontWeight: 300,
+                },
+            },
+        },
+
+        yaxis: {
+            title: {
+                text: 'Temperature (°c)',
+                style: {
+                    color: '#d3e4ff',
+                    fontSize: '12px',
+                    fontFamily: 'Lato, sans-serif',
+                    fontWeight: 300,
+                },
+            },
+            axisTicks: {
+                color: '#d3e4ff',
+                show: true,
+            },
+            axisBorder: {
+                show: true,
+            },
+            labels: {
+                style: {
+                    colors: '#d3e4ff',
+                    fontSize: '12px',
+                    fontFamily: 'Lato, sans-serif',
+                    fontWeight: 300,
+                },
+            },
+        },
+    };
+
+    var chart = new ApexCharts(document.querySelector("#chart"), options);
+    chart.render();
+</script>
+
+<script>
+//     var numberOfDataSeries = 5
+//     var apexChartOptions = {
+//         series: [{
+//             name: 'series1',
+//             data: [12, 11, 14, 18, 17, 13, 13]
+//         }],
+//         chart: {
+//             height: 350,
+//             width: '100%',
+//             type: 'area',
+//             toolbar: {
+//                 show: false,
+//             },
+//         },
+//         // colors: ['#5350e9'],
+//         // stroke: {
+//         //     width: 2,
+//         // },
+//         // grid: {
+//         //     show: false,
+//         // },
+//         dataLabels: {
+//             enabled: false
+//         },
+//         // xaxis: {
+//         //     type: 'category',
+//         //     axisBorder: {
+//         //         show: false
+//         //     },
+//         //     axisTicks: {
+//         //         show: false
+//         //     },
+//         //     labels: {
+//         //         show: false,
+//         //     }
+//         // },
+//         // show: false,
+//         // yaxis: {
+//         //     labels: {
+//         //         show: false,
+//         //     },
+//         // },
+//         // tooltip: {
+//         //     x: {
+//         //         show: false
+//         //     },
+//         // },
+//     }
+//     var chart1 = new ApexCharts(document.querySelector("#ChartGPSLat"), apexChartOptions);
+
+//     window.onload = getData()
+
+//     function getData() {
+//         apexChartOptions.series[0].data.push({
+//             x: `1`,
+//             y: 1
+//         })
+//         apexChartOptions.series[0].data.push({
+//             x: `2`,
+//             y: 2
+//         })
+//         apexChartOptions.series[0].data.push({
+//             x: `4`,
+//             y: 4
+//         })
+//         apexChartOptions.series[0].data.push({
+//             x: `8`,
+//             y: 8
+//         })
+//         apexChartOptions.series[0].data.push({
+//             x: `16`,
+//             y: 16
+//         })
+//         chart1.render()
+//     }
+
+//     function x() {
+//         var xhttp = new XMLHttpRequest();
+//         xhttp.onreadystatechange = function () {
+//             if (this.readyState == 4 && this.status == 200) {
+//                 var prevDate = ''
+//                 var lines = this.responseText.split("\n");
+//                 lines && lines.forEach((line, lineNumber) => {
+//                     var rowValues = line.split(",")
+//                     if (rowValues.length == (numberOfDataSeries + 2)) { // skip incomplete lines
+//                         if (lineNumber > 0) { // ignore header row
+//                             rowValues = rowValues.map(val => val.replace('\r', '')) // clean up \r from any values
+
+//                             var dateStr = (rowValues[0] != prevDate) ? rowValues[0] : ''
+//                             prevDate = rowValues[0]
+//                             apexChartOptions.series[0].data.push({
+//                                 x: `${rowValues[0]} ${rowValues[1]}`,
+//                                 y: rowValues[2]
+//                             })
+
+//                             //charts.GPSLong.xAxisLabels.push(`${dateStr} ${rowValues[1]}`)
+//                             //charts.GPSLong.values.push(rowValues[3])
+//                         }
+//                     }
+//                 })
+//                 chart1.render()
+//             }
+//         };
+//         xhttp.open("GET", "Water Quality Data.csv", true);
+//         xhttp.send();
+//     }
 
 </script>
 
